--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Poets, English -- 19th century -- Biography'
 - !lcsh 'Oxford (England) -- Intellectual life -- 19th century'
+- GITenberg
 title: Shelley at Oxford
 url: http://www.gutenberg.org/ebooks/34525
